--- a/.github/workflows/update_picks.yml
+++ b/.github/workflows/update_picks.yml
@@ -2,8 +2,21 @@ name: Update CFB Picks
 
 on:
   workflow_dispatch:
+    inputs:
+      year:
+        description: "CFB Year (optional)"
+        required: false
+        type: string
+      week:
+        description: "CFB Week (optional)"
+        required: false
+        type: string
+      scan:
+        description: "Scan weeks if empty (e.g., 1-20)"
+        required: false
+        type: string
   schedule:
-    - cron: "15 12 * * *"  # 12:15 UTC daily (~08:15 ET)
+    - cron: "15 12 * * *"  # 12:15 UTC daily
 
 permissions:
   contents: write
@@ -18,27 +31,43 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Generate picks.json
+      - name: Generate picks.json (existing)
         env:
           CFBD_API_KEY: ${{ secrets.CFBD_API_KEY }}
+          CFB_YEAR: ${{ inputs.year }}
+          CFB_WEEK: ${{ inputs.week }}
+          CFB_SCAN_WEEKS: ${{ inputs.scan }}
         run: |
-          python scripts/generate_picks.py
+          python scripts/generate_picks.py || true
+
+      - name: Generate scores.json (new)
+        env:
+          CFBD_API_KEY: ${{ secrets.CFBD_API_KEY }}
+          CFB_YEAR: ${{ inputs.year }}
+          CFB_WEEK: ${{ inputs.week }}
+          CFB_SCAN_WEEKS: ${{ inputs.scan }}
+        run: |
+          python scripts/generate_scores.py
+          echo "--- scores.json size ---"
+          wc -c scores.json || true
+          echo "--- first 20 lines ---"
+          head -n 20 scores.json || true
 
       - name: Commit and push if changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          if [[ -n "$(git status --porcelain picks.json)" ]]; then
-            git add picks.json
-            git commit -m "Update picks.json [skip ci]"
+          if [[ -n "$(git status --porcelain picks.json scores.json)" ]]; then
+            git add picks.json scores.json
+            git commit -m "Update picks.json/scores.json [skip ci]"
             git push
           else
-            echo "No changes in picks.json"
+            echo "No changes in picks.json or scores.json"
           fi
