--- a/.github/workflows/update_weather_openmeteo.yml
+++ b/.github/workflows/update_weather_openmeteo.yml
@@ -26,40 +26,26 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests pandas python-dateutil
 
-      - name: Pre-run state
-        run: |
-          echo "PWD: $PWD"
-          git rev-parse --abbrev-ref HEAD
-          git log -1 --oneline || true
-          ls -la || true
-
       - name: Run Open-Meteo weather enrichment (next 14 days)
         env:
-          # Explicit values to avoid empty env passthroughs
           CFB_YEAR: "2025"
           CFB_SEASON_TYPE: "regular"
           CFB_WEATHER_WINDOW_DAYS: "14"
           CFB_WEATHER_MAX_CALLS: "150"
           CFB_WEATHER_PAST_HOURS: "2"
         run: |
-          set -e
           python scripts/get_weather_openmeteo.py
-          echo "--- weather_enriched.csv (head) ---"; head -n 10 weather_enriched.csv || true
+          echo "--- weather_enriched.csv head ---"; head -n 10 weather_enriched.csv || true
           echo "--- logs_weather_openmeteo.txt ---"; cat logs_weather_openmeteo.txt || true
-          echo "--- counts ---"
-          [ -f weather_enriched.csv ] && wc -l weather_enriched.csv || echo "weather_enriched.csv missing"
-          [ -f logs_weather_openmeteo.txt ] && wc -l logs_weather_openmeteo.txt || echo "logs_weather_openmeteo.txt missing"
 
       - name: Commit and push artifacts
         run: |
-          set -e
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git fetch origin main
           git reset --hard origin/main
-          ls -la || true
-          git add -A
+          git add -f weather_enriched.csv logs_weather_openmeteo.txt
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
