--- a/.github/workflows/run_regression_models.yml
+++ b/.github/workflows/run_regression_models.yml
@@ -3,7 +3,7 @@ name: Run Regression Models (CFB)
 on:
   workflow_dispatch:        # allow manual trigger
   schedule:                 # automatic weekly run
-    - cron: "0 17 * * 2"    # 17:00 UTC = 12:00 PM EST Tuesdays
+    - cron: "0 17 * * 2"    # 17:00 UTC = 12:00 PM EST (Tuesdays)
 
 permissions:
   contents: write
@@ -12,7 +12,7 @@ jobs:
   run-models:
     runs-on: ubuntu-latest
     env:
-      PYTHONUNBUFFERED: "1"   # live stdout/stderr so retries/warnings show immediately
+      PYTHONUNBUFFERED: "1"   # print logs immediately
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,23 +29,23 @@ jobs:
           python -m pip install --upgrade pip
           pip install numpy pandas scikit-learn joblib requests
 
-      - name: Fetch per-game scores (CFBD /games)
+      - name: Fetch per-game scores (CFBD /games, per week)
         env:
           CFBD_API_KEY: ${{ secrets.CFBD_API_KEY }}
         run: |
           set -e
           echo "==> Fetching game scores from CFBD (per week)…"
           python scripts/fetch_game_scores_cfbd.py
-          echo "==> Preview of data/game_scores.csv"
+          echo "==> Preview: data/game_scores.csv"
           head -n 20 data/game_scores.csv || true
           echo "==> Row count (raw):"
           wc -l data/game_scores.csv || true
 
-      - name: Clean scores to unique game IDs
+      - name: Clean scores to unique game IDs / composite keys
         run: |
           set -e
           python scripts/clean_scores_unique_by_id.py
-          echo "==> Preview of data/game_scores_clean.csv"
+          echo "==> Preview: data/game_scores_clean.csv"
           head -n 20 data/game_scores_clean.csv || true
           echo "==> Row count (clean):"
           wc -l data/game_scores_clean.csv || true
@@ -54,7 +54,6 @@ jobs:
         env:
           TARGET_COL: points_scored
           EXCLUDE_TARGET_REGEX: '(?i)^(?!points_scored$).*(points?|scores?|margin|spread)$'
-          # IMPORTANT: use the cleaned, unique-by-id file
           SCORES_CSV: data/game_scores_clean.csv
         run: |
           set -e
@@ -63,7 +62,7 @@ jobs:
 
           echo '--- logs_model_regression.txt ---'
           if [ -f logs_model_regression.txt ]; then
-            cat logs_model_regression.txt
+            tail -n 200 logs_model_regression.txt
           else
             echo "logs_model_regression.txt not found."
           fi
@@ -71,21 +70,21 @@ jobs:
           echo '--- data/model_regression_metrics.csv ---'
           if [ -f data/model_regression_metrics.csv ]; then
             cat data/model_regression_metrics.csv
-          else:
+          else
             echo "data/model_regression_metrics.csv not found."
           fi
 
           echo '--- data/model_regression_coeffs.csv (first 40 rows) ---'
           if [ -f data/model_regression_coeffs.csv ]; then
             head -n 40 data/model_regression_coeffs.csv
-          else:
+          else
             echo "data/model_regression_coeffs.csv not found."
           fi
 
           echo '--- model artifacts ---'
           if [ -d models ]; then
             ls -lh models || true
-          else:
+          else
             echo "models/ directory not found."
           fi
 
@@ -101,6 +100,6 @@ jobs:
 
           if git diff --cached --quiet; then
             echo "No changes to commit (artifacts unchanged)."
-          else:
+          else
             git commit -m "Add regression metrics, coeffs, and model artifacts [skip ci]"
             git push
