--- a/.github/workflows/report-unmatched-scores.yml
+++ b/.github/workflows/report-unmatched-scores.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas numpy
+          pip install pandas numpy requests
 
       # (Optional) refresh scores so the report is current
       - name: Fetch per-game scores (CFBD /games, per week)
